[tool.poetry]
name = "streamlit-snowflakes"
version = "0.1.0"
description = ""
authors = ["Jean"]
readme = "README.md"
packages = [{include = "streamlit_snowflakes"}]

[tool.poetry.dependencies]
streamlit = "^1.27.2"
python = ">=3.8,<3.9.7 || >3.9.7,<4.0"
snowflake-connector-python = "2.8.0"
ipykernel = "^6.26.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
